# websocket_chat

./: .env.dev  .pre-commit-config.yaml  Dockerfile  Makefile  TASK.md  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml
tests/: conftest.py  utils.py
tests/adapters/: test_jwt_token_service.py  test_password_manager.py  test_redis_refresh_token_storage.py
tests/adapters/database/: test_migrations.py
tests/plugins/adapters/: database.py  jwt_token_manager.py  password_manager.py  redis.py  redis_refresh_token_storage.py
websocket_chat/: __main__.py
websocket_chat/adapters/: di.py  jwt_token_manager.py  password_manager.py  redis_refresh_token_storage.py
websocket_chat/adapters/database/: __main__.py  base.py  config.py  tables.py  uow.py  utils.py
websocket_chat/adapters/database/migrations/: env.py
websocket_chat/adapters/database/migrations/versions/: 2025_05_14_fc4047144c90_initial_migration.py
websocket_chat/adapters/database/repositories/: chat.py  chat_participant.py  device.py  message.py  user.py  user_repository.py
websocket_chat/application/: errors.py  logging.py
websocket_chat/domain/: di.py
websocket_chat/domain/entities/: chat.py  token.py  user.py
websocket_chat/domain/interfaces/: chat_participant_repository.py  chat_repository.py  device_repository.py  message_repository.py  refresh_token_storage.py  token_manager.py  token_service.py  user_repository.py
websocket_chat/domain/use_cases/: chat_authorize.py  fetch_chat_history.py  login_user.py  read_message.py  refesh_token.py  register_user.py  save_message.py
websocket_chat/domain/use_cases/mixins/: __init__.py  authorize_mixin.py
websocket_chat/presentors/web/: app_factory.py  config.py  exception_handlers.py  security.py  websocket_manager.py
websocket_chat/presentors/web/routers/api/: router.py
websocket_chat/presentors/web/routers/api/v1/: router.py
websocket_chat/presentors/web/routers/api/v1/auth/: models.py  router.py
websocket_chat/presentors/web/routers/api/v1/chat/: models.py  router.py
websocket_chat/presentors/web/routers/api/v1/monitoring/: models.py  router.py
websocket_chat/presentors/web/routers/api/websockets/: chat.py  router.py
